[gd_scene load_steps=18 format=2]

[ext_resource path="res://meshes/libraries/scenery.tres" type="MeshLibrary" id=1]
[ext_resource path="res://scripts/CinematicCamera.gd" type="Script" id=2]
[ext_resource path="res://scripts/GroundCollision.gd" type="Script" id=3]
[ext_resource path="res://scripts/ui/PauseController.gd" type="Script" id=4]
[ext_resource path="res://scripts/VFXController.gd" type="Script" id=5]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=6]
[ext_resource path="res://scripts/TrainController.gd" type="Script" id=7]
[ext_resource path="res://_raw/models/logo.glb" type="PackedScene" id=8]
[ext_resource path="res://scenes/objects/track-straight.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/ui/hud.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/objects/enemy-turret-small.tscn" type="PackedScene" id=11]
[ext_resource path="res://meshes/libraries/terrain.tres" type="MeshLibrary" id=12]
[ext_resource path="res://environments/default.tres" type="Environment" id=13]
[ext_resource path="res://_raw/audio/music-zinia.mp3" type="AudioStream" id=14]
[ext_resource path="res://scripts/WinLossController.gd" type="Script" id=15]
[ext_resource path="res://scripts/Grid.gd" type="Script" id=16]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 0.051, 34 )

[node name="Spatial" type="Spatial"]

[node name="HUD" parent="." instance=ExtResource( 10 )]

[node name="WinLossController" type="Spatial" parent="."]
script = ExtResource( 15 )

[node name="PauseController" type="Spatial" parent="."]
pause_mode = 2
script = ExtResource( 4 )

[node name="VFXController" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="TrainController" type="Spatial" parent="."]
script = ExtResource( 7 )

[node name="Start" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.156, 2.65594 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.5, 5.26937, 2.51196 )
environment = ExtResource( 13 )
current = true
script = ExtResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.443842, -0.865564, 0.231958, -0.51586, 0.458456, 0.723676, -0.73273, 0.201539, -0.649991, 3.37471, 1.62158, -0.0127292 )
shadow_enabled = true
directional_shadow_normal_bias = 0.0

[node name="Grid" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5 )
script = ExtResource( 16 )

[node name="GridMaps" type="Spatial" parent="Grid"]

[node name="Terrain" type="GridMap" parent="Grid/GridMaps"]
mesh_library = ExtResource( 12 )
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 1441792, 3, 0, 1441792, 4, 0, 1441796, 65531, 0, 1048580, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 1441792, 3, 1, 1441792, 4, 1, 1441796, 65531, 1, 1048580, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 2, 655364, 1, 2, 655364, 2, 2, 655364, 3, 2, 655364, 4, 2, 1441794, 65531, 2, 655362, 65532, 2, 655364, 65533, 2, 655364, 65534, 2, 655364, 65535, 2, 655364, 0, 65471, 4, 1, 65471, 4, 2, 65471, 4, 3, 65471, 4, 4, 65471, 2, 65531, 65471, 1048578, 65532, 65471, 4, 65533, 65471, 4, 65534, 65471, 4, 65535, 65471, 4, 0, 65472, 0, 1, 65472, 0, 2, 65472, 0, 3, 65472, 0, 4, 65472, 1441796, 65531, 65472, 1048580, 65532, 65472, 0, 65533, 65472, 0, 65534, 65472, 0, 65535, 65472, 0, 0, 65473, 0, 1, 65473, 0, 2, 65473, 0, 3, 65473, 0, 4, 65473, 1441796, 65531, 65473, 1048580, 65532, 65473, 0, 65533, 65473, 0, 65534, 65473, 0, 65535, 65473, 0, 0, 65474, 0, 1, 65474, 0, 2, 65474, 0, 3, 65474, 0, 4, 65474, 1441796, 65531, 65474, 1048580, 65532, 65474, 0, 65533, 65474, 0, 65534, 65474, 0, 65535, 65474, 0, 0, 65475, 0, 1, 65475, 0, 2, 65475, 0, 3, 65475, 0, 4, 65475, 1441796, 65531, 65475, 1048580, 65532, 65475, 0, 65533, 65475, 0, 65534, 65475, 0, 65535, 65475, 0, 0, 65476, 0, 1, 65476, 0, 2, 65476, 0, 3, 65476, 0, 4, 65476, 1441796, 65531, 65476, 1048580, 65532, 65476, 0, 65533, 65476, 0, 65534, 65476, 0, 65535, 65476, 0, 0, 65477, 0, 1, 65477, 0, 2, 65477, 0, 3, 65477, 0, 4, 65477, 1441796, 65531, 65477, 1048580, 65532, 65477, 0, 65533, 65477, 0, 65534, 65477, 0, 65535, 65477, 0, 0, 65478, 0, 1, 65478, 0, 2, 65478, 0, 3, 65478, 0, 4, 65478, 1441796, 65531, 65478, 1048580, 65532, 65478, 0, 65533, 65478, 0, 65534, 65478, 0, 65535, 65478, 0, 0, 65479, 0, 1, 65479, 0, 2, 65479, 0, 3, 65479, 0, 4, 65479, 1441796, 65531, 65479, 1048580, 65532, 65479, 0, 65533, 65479, 0, 65534, 65479, 0, 65535, 65479, 0, 0, 65480, 0, 1, 65480, 0, 2, 65480, 0, 3, 65480, 0, 4, 65480, 1441796, 65531, 65480, 1048580, 65532, 65480, 0, 65533, 65480, 0, 65534, 65480, 0, 65535, 65480, 0, 0, 65481, 0, 1, 65481, 0, 2, 65481, 0, 3, 65481, 0, 4, 65481, 1441796, 65531, 65481, 1048580, 65532, 65481, 0, 65533, 65481, 0, 65534, 65481, 0, 65535, 65481, 0, 0, 65482, 0, 1, 65482, 0, 2, 65482, 0, 3, 65482, 0, 4, 65482, 1441796, 65531, 65482, 1048580, 65532, 65482, 0, 65533, 65482, 0, 65534, 65482, 0, 65535, 65482, 0, 0, 65483, 0, 1, 65483, 0, 2, 65483, 0, 3, 65483, 0, 4, 65483, 1441796, 65531, 65483, 1048580, 65532, 65483, 0, 65533, 65483, 0, 65534, 65483, 0, 65535, 65483, 0, 0, 65484, 0, 1, 65484, 0, 2, 65484, 0, 3, 65484, 0, 4, 65484, 1441796, 65531, 65484, 1048580, 65532, 65484, 0, 65533, 65484, 0, 65534, 65484, 0, 65535, 65484, 0, 0, 65485, 0, 1, 65485, 0, 2, 65485, 0, 3, 65485, 0, 4, 65485, 1441796, 65531, 65485, 1048580, 65532, 65485, 0, 65533, 65485, 0, 65534, 65485, 0, 65535, 65485, 0, 0, 65486, 0, 1, 65486, 0, 2, 65486, 0, 3, 65486, 0, 4, 65486, 1441796, 65531, 65486, 1048580, 65532, 65486, 0, 65533, 65486, 0, 65534, 65486, 0, 65535, 65486, 0, 0, 65487, 0, 1, 65487, 0, 2, 65487, 0, 3, 65487, 0, 4, 65487, 1441796, 65531, 65487, 1048580, 65532, 65487, 0, 65533, 65487, 0, 65534, 65487, 0, 65535, 65487, 0, 0, 65488, 0, 1, 65488, 0, 2, 65488, 0, 3, 65488, 0, 4, 65488, 1441796, 65531, 65488, 1048580, 65532, 65488, 0, 65533, 65488, 0, 65534, 65488, 0, 65535, 65488, 0, 0, 65489, 0, 1, 65489, 0, 2, 65489, 0, 3, 65489, 0, 4, 65489, 1441796, 65531, 65489, 1048580, 65532, 65489, 0, 65533, 65489, 0, 65534, 65489, 0, 65535, 65489, 0, 0, 65490, 0, 1, 65490, 0, 2, 65490, 0, 3, 65490, 0, 4, 65490, 1441796, 65531, 65490, 1048580, 65532, 65490, 0, 65533, 65490, 0, 65534, 65490, 0, 65535, 65490, 0, 0, 65491, 0, 1, 65491, 0, 2, 65491, 0, 3, 65491, 0, 4, 65491, 1441796, 65531, 65491, 1048580, 65532, 65491, 0, 65533, 65491, 0, 65534, 65491, 0, 65535, 65491, 0, 0, 65492, 0, 1, 65492, 0, 2, 65492, 0, 3, 65492, 0, 4, 65492, 1441796, 65531, 65492, 1048580, 65532, 65492, 0, 65533, 65492, 0, 65534, 65492, 0, 65535, 65492, 0, 0, 65493, 0, 1, 65493, 0, 2, 65493, 0, 3, 65493, 0, 4, 65493, 1441796, 65531, 65493, 1048580, 65532, 65493, 0, 65533, 65493, 0, 65534, 65493, 0, 65535, 65493, 0, 0, 65494, 0, 1, 65494, 0, 2, 65494, 0, 3, 65494, 0, 4, 65494, 1441796, 65531, 65494, 1048580, 65532, 65494, 0, 65533, 65494, 0, 65534, 65494, 0, 65535, 65494, 0, 0, 65495, 0, 1, 65495, 0, 2, 65495, 0, 3, 65495, 0, 4, 65495, 1441796, 65531, 65495, 1048580, 65532, 65495, 0, 65533, 65495, 0, 65534, 65495, 0, 65535, 65495, 0, 0, 65496, 0, 1, 65496, 0, 2, 65496, 0, 3, 65496, 0, 4, 65496, 1441796, 65531, 65496, 1048580, 65532, 65496, 0, 65533, 65496, 0, 65534, 65496, 0, 65535, 65496, 0, 0, 65497, 0, 1, 65497, 0, 2, 65497, 0, 3, 65497, 0, 4, 65497, 1441796, 65531, 65497, 1048580, 65532, 65497, 0, 65533, 65497, 0, 65534, 65497, 0, 65535, 65497, 0, 0, 65498, 0, 1, 65498, 0, 2, 65498, 0, 3, 65498, 0, 4, 65498, 1441796, 65531, 65498, 1048580, 65532, 65498, 0, 65533, 65498, 0, 65534, 65498, 0, 65535, 65498, 0, 0, 65499, 0, 1, 65499, 0, 2, 65499, 0, 3, 65499, 0, 4, 65499, 1441796, 65531, 65499, 1048580, 65532, 65499, 0, 65533, 65499, 0, 65534, 65499, 0, 65535, 65499, 0, 0, 65500, 0, 1, 65500, 0, 2, 65500, 0, 3, 65500, 0, 4, 65500, 1441796, 65531, 65500, 1048580, 65532, 65500, 0, 65533, 65500, 0, 65534, 65500, 0, 65535, 65500, 0, 0, 65501, 0, 1, 65501, 0, 2, 65501, 0, 3, 65501, 0, 4, 65501, 1441796, 65531, 65501, 1048580, 65532, 65501, 0, 65533, 65501, 0, 65534, 65501, 0, 65535, 65501, 0, 0, 65502, 0, 1, 65502, 0, 2, 65502, 0, 3, 65502, 0, 4, 65502, 1441796, 65531, 65502, 1048580, 65532, 65502, 0, 65533, 65502, 0, 65534, 65502, 0, 65535, 65502, 0, 0, 65503, 0, 1, 65503, 0, 2, 65503, 0, 3, 65503, 0, 4, 65503, 1441796, 65531, 65503, 1048580, 65532, 65503, 0, 65533, 65503, 0, 65534, 65503, 0, 65535, 65503, 0, 0, 65504, 0, 1, 65504, 0, 2, 65504, 0, 3, 65504, 0, 4, 65504, 1441796, 65531, 65504, 1048580, 65532, 65504, 0, 65533, 65504, 0, 65534, 65504, 0, 65535, 65504, 0, 0, 65505, 0, 1, 65505, 0, 2, 65505, 0, 3, 65505, 0, 4, 65505, 1441796, 65531, 65505, 1048580, 65532, 65505, 0, 65533, 65505, 0, 65534, 65505, 0, 65535, 65505, 0, 0, 65506, 0, 1, 65506, 0, 2, 65506, 0, 3, 65506, 0, 4, 65506, 1441796, 65531, 65506, 1048580, 65532, 65506, 0, 65533, 65506, 0, 65534, 65506, 0, 65535, 65506, 0, 0, 65507, 0, 1, 65507, 0, 2, 65507, 0, 3, 65507, 0, 4, 65507, 1441796, 65531, 65507, 1048580, 65532, 65507, 0, 65533, 65507, 0, 65534, 65507, 0, 65535, 65507, 0, 0, 65508, 0, 1, 65508, 0, 2, 65508, 0, 3, 65508, 0, 4, 65508, 1441796, 65531, 65508, 1048580, 65532, 65508, 0, 65533, 65508, 0, 65534, 65508, 0, 65535, 65508, 0, 0, 65509, 0, 1, 65509, 0, 2, 65509, 0, 3, 65509, 0, 4, 65509, 1441796, 65531, 65509, 1048580, 65532, 65509, 0, 65533, 65509, 0, 65534, 65509, 0, 65535, 65509, 0, 0, 65510, 0, 1, 65510, 0, 2, 65510, 0, 3, 65510, 0, 4, 65510, 1441796, 65531, 65510, 1048580, 65532, 65510, 0, 65533, 65510, 0, 65534, 65510, 0, 65535, 65510, 0, 0, 65511, 0, 1, 65511, 0, 2, 65511, 0, 3, 65511, 0, 4, 65511, 1441796, 65531, 65511, 1048580, 65532, 65511, 0, 65533, 65511, 0, 65534, 65511, 0, 65535, 65511, 0, 0, 65512, 0, 1, 65512, 0, 2, 65512, 0, 3, 65512, 0, 4, 65512, 1441796, 65531, 65512, 1048580, 65532, 65512, 0, 65533, 65512, 0, 65534, 65512, 0, 65535, 65512, 0, 0, 65513, 0, 1, 65513, 0, 2, 65513, 0, 3, 65513, 0, 4, 65513, 1441796, 65531, 65513, 1048580, 65532, 65513, 0, 65533, 65513, 0, 65534, 65513, 0, 65535, 65513, 0, 0, 65514, 0, 1, 65514, 0, 2, 65514, 0, 3, 65514, 0, 4, 65514, 1441796, 65531, 65514, 1048580, 65532, 65514, 0, 65533, 65514, 0, 65534, 65514, 0, 65535, 65514, 0, 0, 65515, 0, 1, 65515, 0, 2, 65515, 0, 3, 65515, 0, 4, 65515, 1441796, 65531, 65515, 1048580, 65532, 65515, 0, 65533, 65515, 0, 65534, 65515, 0, 65535, 65515, 0, 0, 65516, 0, 1, 65516, 0, 2, 65516, 0, 3, 65516, 0, 4, 65516, 1441796, 65531, 65516, 1048580, 65532, 65516, 0, 65533, 65516, 0, 65534, 65516, 0, 65535, 65516, 0, 0, 65517, 0, 1, 65517, 0, 2, 65517, 0, 3, 65517, 0, 4, 65517, 1441796, 65531, 65517, 1048580, 65532, 65517, 0, 65533, 65517, 0, 65534, 65517, 0, 65535, 65517, 0, 0, 65518, 0, 1, 65518, 0, 2, 65518, 0, 3, 65518, 0, 4, 65518, 1441796, 65531, 65518, 1048580, 65532, 65518, 0, 65533, 65518, 0, 65534, 65518, 0, 65535, 65518, 0, 0, 65519, 655360, 1, 65519, 655360, 2, 65519, 655360, 3, 65519, 655360, 4, 65519, 1441796, 65531, 65519, 1048580, 65532, 65519, 655360, 65533, 65519, 655360, 65534, 65519, 655360, 65535, 65519, 655360, 0, 65520, 655360, 1, 65520, 655360, 2, 65520, 655360, 3, 65520, 655360, 4, 65520, 1441796, 65531, 65520, 1048580, 65532, 65520, 655360, 65533, 65520, 655360, 65534, 65520, 655360, 65535, 65520, 655360, 0, 65521, 655360, 1, 65521, 655360, 2, 65521, 655360, 3, 65521, 655360, 4, 65521, 1441796, 65531, 65521, 1048580, 65532, 65521, 655360, 65533, 65521, 655360, 65534, 65521, 655360, 65535, 65521, 655360, 0, 65522, 655360, 1, 65522, 655360, 2, 65522, 655360, 3, 65522, 655360, 4, 65522, 1441796, 65531, 65522, 1048580, 65532, 65522, 655360, 65533, 65522, 655360, 65534, 65522, 655360, 65535, 65522, 655360, 0, 65523, 655360, 1, 65523, 655360, 2, 65523, 655360, 3, 65523, 655360, 4, 65523, 1441796, 65531, 65523, 1048580, 65532, 65523, 655360, 65533, 65523, 655360, 65534, 65523, 655360, 65535, 65523, 655360, 0, 65524, 655360, 1, 65524, 655360, 2, 65524, 655360, 3, 65524, 1441792, 4, 65524, 1441796, 65531, 65524, 1048580, 65532, 65524, 655360, 65533, 65524, 655360, 65534, 65524, 655360, 65535, 65524, 655360, 0, 65525, 655360, 1, 65525, 655360, 2, 65525, 655360, 3, 65525, 1441792, 4, 65525, 1441796, 65531, 65525, 1048580, 65532, 65525, 655360, 65533, 65525, 655360, 65534, 65525, 655360, 65535, 65525, 655360, 0, 65526, 655360, 1, 65526, 655360, 2, 65526, 655360, 3, 65526, 1441792, 4, 65526, 1441796, 65531, 65526, 1048580, 65532, 65526, 655360, 65533, 65526, 655360, 65534, 65526, 655360, 65535, 65526, 655360, 0, 65527, 655360, 1, 65527, 655360, 2, 65527, 655360, 3, 65527, 655360, 4, 65527, 1441796, 65531, 65527, 1048580, 65532, 65527, 655360, 65533, 65527, 655360, 65534, 65527, 655360, 65535, 65527, 655360, 0, 65528, 655360, 1, 65528, 655360, 2, 65528, 655360, 3, 65528, 655360, 4, 65528, 1441796, 65531, 65528, 1048580, 65532, 65528, 655360, 65533, 65528, 655360, 65534, 65528, 655360, 65535, 65528, 655360, 0, 65529, 655360, 1, 65529, 655360, 2, 65529, 655360, 3, 65529, 655360, 4, 65529, 1441796, 65531, 65529, 1048580, 65532, 65529, 655360, 65533, 65529, 655360, 65534, 65529, 655360, 65535, 65529, 655360, 0, 65530, 655360, 1, 65530, 655360, 2, 65530, 655360, 3, 65530, 655360, 4, 65530, 1441796, 65531, 65530, 1048580, 65532, 65530, 655360, 65533, 65530, 655360, 65534, 65530, 655360, 65535, 65530, 655360, 0, 65531, 655360, 1, 65531, 655360, 2, 65531, 655360, 3, 65531, 655360, 4, 65531, 1441796, 65531, 65531, 1048580, 65532, 65531, 655360, 65533, 65531, 655360, 65534, 65531, 655360, 65535, 65531, 655360, 0, 65532, 655360, 1, 65532, 655360, 2, 65532, 655360, 3, 65532, 655360, 4, 65532, 1441796, 65531, 65532, 1048580, 65532, 65532, 655360, 65533, 65532, 655360, 65534, 65532, 655360, 65535, 65532, 655360, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 1441792, 4, 65533, 1441796, 65531, 65533, 1048580, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 3, 65534, 1441792, 4, 65534, 1441796, 65531, 65534, 1048580, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 1441792, 3, 65535, 1441792, 4, 65535, 1441796, 65531, 65535, 1048580, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="ScenerySmall" type="GridMap" parent="Grid/GridMaps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00878954, 0.100001, 0.00289869 )
mesh_library = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
cell_scale = 0.5
data = {
"cells": PoolIntArray( 3, 0, 655368, 65532, 0, 1441797, 0, 65533, 1441798, 3, 65534, 1441793 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="SceneryLarge" type="GridMap" parent="Grid/GridMaps"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
mesh_library = ExtResource( 1 )
cell_size = Vector3( 1, 1, 1 )
cell_center_y = false
data = {
"cells": PoolIntArray( 3, 0, 1441796, 65534, 65531, 7, 65532, 65533, 1441800, 65533, 65533, 655360, 3, 65535, 1441796 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="Track" type="Spatial" parent="Grid"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.1, 1.5 )

[node name="track-straight" parent="Grid/Track" instance=ExtResource( 9 )]

[node name="track-straight2" parent="Grid/Track" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="track-straight3" parent="Grid/Track" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )

[node name="track-straight4" parent="Grid/Track" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3 )

[node name="track-straight5" parent="Grid/Track" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )

[node name="track-straight6" parent="Grid/Track" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )

[node name="Enemy" type="Spatial" parent="Grid"]

[node name="turret-small" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -4.5 )

[node name="turret-small2" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -1.5 )

[node name="turret-small3" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -7.5 )

[node name="turret-small4" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, -8.5 )

[node name="turret-small5" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -8.5 )

[node name="turret-small6" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -10.5 )

[node name="turret-small7" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -11.5 )

[node name="turret-small8" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -13.5 )

[node name="turret-small9" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -13.5 )

[node name="turret-small10" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, -16.5 )

[node name="turret-small11" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -19.5 )

[node name="turret-small12" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -23.5 )

[node name="turret-small13" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 0, -23.5 )

[node name="turret-small14" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5, 0, -23.5 )

[node name="turret-small15" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, -27.5 )

[node name="turret-small16" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -29.5 )

[node name="turret-small17" parent="Grid/Enemy" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, -32.5 )

[node name="logo" parent="." instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.1, -2 )
visible = false

[node name="CinematicCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.02, 0.379, 2.149 )
visible = false
environment = ExtResource( 13 )
script = ExtResource( 2 )

[node name="Ground" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 0.5 )
script = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, -31 )
shape = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 14 )
volume_db = -10.0
autoplay = true

[connection signal="requested_car" from="HUD" to="TrainController" method="on_hud_requested_car"]
[connection signal="requested_track" from="HUD" to="TrainController" method="on_hud_requested_track"]
[connection signal="game_lost" from="WinLossController" to="HUD" method="on_game_lost"]
[connection signal="game_won" from="WinLossController" to="HUD" method="on_game_won"]
[connection signal="pause_state_changed" from="PauseController" to="HUD" method="on_pause_state_changed"]
[connection signal="integrity_changed" from="TrainController" to="HUD" method="on_train_integrity_changed"]
[connection signal="next_track_position_changed" from="TrainController" to="HUD" method="on_next_track_position_changed"]
[connection signal="track_direction_changed" from="TrainController" to="HUD" method="on_track_direction_changed"]
[connection signal="child_entered_tree" from="Grid/Track" to="Grid" method="add_node"]
[connection signal="child_entered_tree" from="Grid/Enemy" to="Grid" method="add_node"]
[connection signal="body_entered" from="Ground" to="Ground" method="on_body_entered"]
